tests finalisés